# lucene-parser

./: .gitignore  README.md  USAGE_GUIDE.md  setup.py  streamlit_app.py  test_api.sh  test_library.py
examples/: basic_usage.py  batch_processing.py  error_handling.py
lucene-api/: pyproject.toml  test_luqum.py
lucene-api/app/: main.py
lucene-api/app/api/routes/: query_routes.py
lucene-api/app/controllers/: __init__.py  query_controller.py
lucene-api/app/core/: __init__.py  config.py  logging.py
lucene-api/app/dependencies/: __init__.py  service_deps.py
lucene-api/app/schemas/: __init__.py  query_schema.py
lucene-api/app/services/: query_parser_service.py  text_normalizer_service.py
lucene_query_parser/: __init__.py  models.py  normalizer.py  parser.py
queries/: complex_query.txt  field_search.txt  simple_query.txt
